# doodle

./: .dockerignore  Dockerfile  Dockerfile.go  README.md  index.html  run-builder.sh  run.sh
scribble/: Cargo.toml
scribble/data/: template.html
scribble/src/: main.rs
scripts/: commit.sh  run-go.sh  run.sh
tools/: Cargo.toml
tools-go/: go.mod  go.sum
tools-go/cmd/estimate/: estimate.go
tools-go/cmd/scribble/: scribble.go
tools-go/cmd/scribble/data/: sonnets.go  template.go
tools/data/: czak.html
