[package]
name = "doodle-tools"
version = "0.1.0"
authors = ["Łukasz Adamczak <lukasz@czak.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
scraper = "0.11.0"
chrono = "0.4"
